@@ -1,4 +1,4 @@
 # DO NOT MERGE INTO TRUNK
-RELEASE=.0b3
+RELEASE=.0b4
 BRANCH=1.1
 TRUNK=
