@@ -968,12 +968,12 @@ top.Firebug =
     {
         if (!uri)  // null or undefined is denied
             return false;
-        var url  =  uri.spec ? uri.spec : uri;
+        var url  = (uri instanceof nsIURI) ? uri.spec : uri.toString();
         if (FBL.isLocalURL(url) && !this.disabledFile)
             return true;
         if (isSystemURL(url) && Firebug.allowSystemPages)
             return true;
-        if (uri.spec)
+        if (uri instanceof nsIURI)
         {
                if (pm.testPermission(uri, "firebug") == ALLOW_ACTION)
                 return true;
@@ -985,10 +985,10 @@ top.Firebug =
     {
         if (!uri)  // null or undefined is denied
             return true;
-        var url  =  uri.spec ? uri.spec : uri;
+        var url  = (uri instanceof nsIURI) ? uri.spec : uri.toString();
         if (isSystemURL(url) && !Firebug.allowSystemPages)
             return true;
-        if (uri.spec)
+        if (uri instanceof nsIURI)
         {
             if (pm.testPermission(uri, "firebug") == DENY_ACTION)
                 return true;
