@@ -5,7 +5,7 @@
 
   <Description about="urn:mozilla:install-manifest">
     <em:id>firebug@software.joehewitt.com</em:id>
-    <em:version>1.1.0b2</em:version>
+    <em:version>1.1.0b4</em:version>
     <em:type>2</em:type>
 
     <!-- Firefox -->
@@ -27,18 +27,18 @@
     </em:targetApplication>
 
     <em:name>Firebug</em:name>
-    <em:description>Web Development Evolved. (See http://fireclipse.xucia.com for updates)</em:description>
+    <em:description>Web Development Evolved. </em:description>
     <em:creator>Joe Hewitt</em:creator>
-    <em:contributor>1.1 enhancements: John J. Barton (IBM Almaden)</em:contributor>
-    <em:contributor>Max Stepanov (Aptana Inc.)</em:contributor>
+    <em:contributor>1.1 enhancements: John J. Barton (IBM Almaden Research Center)</em:contributor>
+    <em:contributor>Max Stepanov (Aptana, Inc.)</em:contributor>
     <em:iconURL>chrome://firebug/content/firebug.png</em:iconURL>
     <em:homepageURL>http://www.getfirebug.com/</em:homepageURL>
     <em:updateURL>http://fireclipse.xucia.com/files/fireclipse/update.rdf</em:updateURL>
-	<em:updateKey>
-		MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDA6eg5lT8wHTQsSn+ml+Njwm8p3iCgPAHM
-		xfqGlZl6Zg70mLzZo0Drna6gyHfqSuQ4BfWvQ1fIxIdH5tHGIsXpY9R7igHt2Rv3CGRDbIm3
-		Ic+oHnLytnMZc3Gu0imORZAHLSejQEnqZ4OqdT534QyRXi3aEZXCjvLZ7+cfTaMn1QIDAQAB
-	</em:updateKey>
+    <em:updateKey>
+        MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQDA6eg5lT8wHTQsSn+ml+Njwm8p3iCgPAHM
+        xfqGlZl6Zg70mLzZo0Drna6gyHfqSuQ4BfWvQ1fIxIdH5tHGIsXpY9R7igHt2Rv3CGRDbIm3
+        Ic+oHnLytnMZc3Gu0imORZAHLSejQEnqZ4OqdT534QyRXi3aEZXCjvLZ7+cfTaMn1QIDAQAB
+    </em:updateKey>
 
   </Description>
 </RDF>
